--- a/tests/test-packets.py.in
+++ b/tests/test-packets.py.in
@@ -1,5 +1,5 @@
 #!@PYTHON@
-# -*- mode: python -*-
+# -*- py-indent-offset: 4; coding: utf-8; mode: python -*-
 #
 # Copyright (C) 2007, 2008, 2009 Loic Dachary <loic@dachary.org>
 #
@@ -98,6 +98,7 @@ class PacketsTestCase(testpackets.PacketsTestBase):
                                           ('j', 'n', 'cbool'),
                                           ('j1', 'y', 'cbool'),
                                           ('k', None, 'Bnone'),
+                                          ('m', u'aü', 'u')
                                           )
             fields = ( "\x0a", # type
                        "\0\0", # length
@@ -113,6 +114,7 @@ class PacketsTestCase(testpackets.PacketsTestBase):
                        "\x00", # j
                        "\x01", # j1
                        "\xff", # k
+                       "\x00\x03a\xc3\xbc", # m
                        )
             binary = fields[0] + pack('!H', len("".join(fields))) + "".join(fields[2:])
         d = {}
