transform all python headings to utf-8

--- a/database/pokerdatabaseupgrade.in
+++ b/database/pokerdatabaseupgrade.in
@@ -1,5 +1,5 @@
 #!@PYTHON@ 
-# -*- coding: iso-8859-1; mode: python -*-
+# -*- py-indent-offset: 4; coding: utf-8; mode: python -*-
 #
 # Copyright (C) 2004, 2005, 2006 Mekensleep <licensing@mekensleep.com>
 #                                24 rue vieille du temple, 75004 Paris
