--- a/tests/test-proxy.py.in
+++ b/tests/test-proxy.py.in
@@ -1,5 +1,5 @@
 #!@PYTHON@
-# -*- mode: python; coding: iso-8859-1 -*-
+# -*- py-indent-offset: 4; coding: utf-8; mode: python -*-
 #
 # Copyright (C) 2009 Bradley M. Kuhn <bkuhn@ebb.org>
 #
